--- a/index.html
+++ b/index.html
@@ -8,12 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    <header>
-        <a href="../"><i class="fa-solid fa-house"></i></a>
-    </header>
-
     <section class="main-container">
-        <h1>Calculator</h1>
         <input type="text" class="display" id="display" value="0" readonly>
         <div class="buttons-container">
             <button class="button" id="clear" value="clear">AC</button>
@@ -32,7 +27,7 @@
             <button class="button" id="two" value="2">2</button>
             <button class="button" id="three" value="3">3</button>
             <button class="button" id="add" value="+">+</button>
-            <button class="button" id="backspace" value="backspace"><--</button>
+            <button class="button" id="backspace" value="backspace">⌫</button>
             <button class="button" id="zero" value="0">0</button>
             <button class="button" id="decimal" value=".">.</button>
             <button class="button" id="equals" value="equals">=</button>
